--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,16 @@ label[for="toggle-all"] {
   line-height: 1.2;
   transition: color 0.4s;
 }
-
+.todo-list li input[type="text"] {
+  white-space: pre-line;
+  word-break: break-all;
+  padding: 15px 60px 15px 15px;
+  margin-left: 45px;
+  font-size: 24px;
+  display: none;
+  line-height: 1.2;
+  transition: color 0.4s;
+}
 .todo-list li.completed label {
   color: #d9d9d9;
   text-decoration: line-through;
